# number-reversi

./: .gitignore  Cargo.toml  README-ja.md  README.md  index.html
.github/workflows/: static.yml
src/: game.rs  lib.rs  main.rs  views.rs
src/app/: game.rs  menu.rs
src/controller/: game_state.rs
src/game/: assets.rs  events.rs  rule.rs
src/game/assets/: board.rs  piece.rs  pieces.rs  player.rs  square.rs
src/game/events/: check_pass.rs  check_puttable_position_exists.rs  put_piece.rs  reverse.rs
src/game/rule/: color.rs  position.rs  score.rs  search.rs  turn.rs
src/tests/: helper.rs
src/tests/helper/: board_helper.rs
src/views/: game.rs
src/views/game/: board_view.rs  decrement_button.rs  increment_button.rs  piece_view.rs  score_view.rs
src/views/page/: header.rs
