[package]
name = "number-reversi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rstest = "*"
serde = { version = "*", features = ["derive"] }
yew = {version="0.20.0", features=["csr"]}
wasm-bindgen = "0.2"
log = "0.4.6"
wasm-logger = "0.2.0"
yew-canvas = "0.2.4"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3.60"
features = [
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
  'CanvasRenderingContext2d',
  'ImageData'
]

